--- a/index.html
+++ b/index.html
@@ -4,20 +4,39 @@
 		<meta charset="utf-8">
 		<title>Amazing Dogs</title>
 	</head>
+	
 	<body>
-		<h1>The Poodle</h1>
+		<div class="introduction">
+			<h1>The Poodle</h1>
+			<h3>Created by: Izzy Pletl</h3>
+			<h3>Edited by: ...</h3>
+			<p>
+				The poodle is a beautiful dog breed, very smart, intelligent and it comes in big and small.
+			</p>
+			<img src="images/big_pudel.jpg" width="300" alt="Picture of a Poodle">
+		</div>
+		<div class="History">
+			<h2>History</h2>
+			<p>
+				The name of the poodle comes from the German word <em>pudeln</em>, which means: splash in water. 
+				The poodle used to be a popular breed for water-hunts of noblemen before the 19th century, therefore the name.
+				The exact country of origin is officially France, though.
+			</p>
+		</div>
+		<div class="Features">
+			<h2>Freatures</h2>
+			<p>
+				As mentioned before, poodle have many different sizes and coloures. The most popular size is the small poodle, however, the oldest one is the kingpoodle. 
+			</p>
+			<ul>
+				<li>Toy poodle</li>
+				<li>Small poodle</li>
+				<li>Medium poodle</li>
+				<li>Kingpoodle</li>
+			</ul>
+		</div>
 		<p>
-			The poodle is a beautiful dog breed, very smart, intelligent and it comes in big and small.
-		</p>
-		<img src="images/big_pudel.jpg" width="300" alt="Picture of a Poodle">
-		<h2>History</h2>
-		<p>
-			The name of the poodle comes from the German word <em>pudeln</em>, which means splash in water. 
-			The poodle used to be a popular breed for water-hunts of noblemen before the 19th century, therefore the name.
-			The exact country of origin is officially France, though.
-		</p>
-		<p>
-			Website developed by a <a href="https//www.buas.nl" target="_blank">Breda University Student</a>
+			Website developed by <a href="https//www.buas.nl" target="_blank">Breda University Students</a>
 		</p>
 	</body>
 </html>
