--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<div class="introduction">
 			<h1>The Poodle</h1>
 			<h3>Created by: Izzy Pletl</h3>
-			<h3>Edited by: ...</h3>
+			<h3>Edited by: Raphaël (lecturer)</h3>
 			<p>
 				The poodle is a beautiful dog breed, very smart, intelligent and it comes in big and small.
 			</p>
