--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<p>
 				The name of the poodle comes from the German word <em>pudeln</em>, which means: splash in water. 
 				The poodle used to be a popular breed for water-hunts of noblemen before the 19th century, therefore the name.
-				The exact country of origin is officially France, though.
+				The country of origin is officially France, though.
 			</p>
 		</div>
 		<div class="Features">
