added style sheet
and aligned html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Amazing Dogs</title>
+		<link href="css/style.css" type="text/css" rel="stylesheet">
 	</head>
 	
 	<body>
@@ -10,33 +11,32 @@
 			<h1>The Poodle</h1>
 			<h3>Created by: Izzy Pletl</h3>
 			<h3>Edited by: Raphaël (lecturer)</h3>
-			<p>
-				The poodle is a beautiful dog breed, very smart, intelligent and it comes in big and small.
-			</p>
-			<img src="images/big_pudel.jpg" width="300" alt="Picture of a Poodle">
+			<img src="images/big_pudel.jpg" width="300" alt="Picture of a Poodle" id="corners">
 		</div>
-		<div class="History">
+		<br>
+		<div class="history">
 			<h2>History</h2>
 			<p>
-				The name of the poodle comes from the German word <em>pudeln</em>, which means: splash in water. 
+				The poodle is a beautiful dog breed, very smart, intelligent and it comes in big and small. The name of the poodle comes from the German word <em>pudeln</em>, which means: splash in water. 
 				The poodle used to be a popular breed for water-hunts of noblemen before the 19th century, therefore the name.
-				The country of origin is officially France, though.
+				Because of his great attributes, the Pudel contributed to many other breeds like the <em>Schnauzer</em>, or the <em>Bichon</em>. 
 			</p>
 		</div>
-		<div class="Features">
-			<h2>Freatures</h2>
+		<div class="features">
+			<h2>Features</h2>
 			<p>
-				As mentioned before, poodle have many different sizes and coloures. The most popular size is the small poodle, however, the oldest one is the kingpoodle. 
+				As mentioned before, poodle have many different sizes, being:
 			</p>
 			<ul>
 				<li>Toy poodle</li>
 				<li>Small poodle</li>
 				<li>Medium poodle</li>
-				<li>Kingpoodle</li>
+				<li>Standard</li>
 			</ul>
+			
 		</div>
-		<p>
-			Website developed by <a href="https//www.buas.nl" target="_blank">Breda University Students</a>
+		<p id="Buas">
+			Website developed by a <a href="https//www.buas.nl" target="_blank">Breda University Students</a>
 		</p>
 	</body>
 </html>
