ready for Check#4
added dummy text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Amazing Dogs</title>
-		<link href="css/style.css" type="text/css" rel="stylesheet">
+		<link href="css/styles.css" type="text/css" rel="stylesheet">
 	</head>
 	
 	<body>
@@ -13,7 +13,6 @@
 			<h3>Edited by: Raphaël (lecturer)</h3>
 			<img src="images/big_pudel.jpg" width="300" alt="Picture of a Poodle" id="corners">
 		</div>
-		<br>
 		<div class="history">
 			<h2>History</h2>
 			<p>
@@ -37,6 +36,9 @@
 		</div>
 		<p id="Buas">
 			Website developed by a <a href="https//www.buas.nl" target="_blank">Breda University Students</a>
+		</p>
+		<p class="dummytext">
+			Lorem ipsum
 		</p>
 	</body>
 </html>
