--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
 				<li>Medium poodle</li>
 				<li>Standard</li>
 			</ul>
-			
 		</div>
+		<div class="end">
 		<p id="Buas">
 			Website developed by a <a href="https//www.buas.nl" target="_blank">Breda University Students</a>
 		</p>
-		<p class="dummytext">
+		<p id="dummytext">
 			Lorem ipsum
 		</p>
+		</div>
 	</body>
 </html>
