--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		</div>
 		<div class="end">
 		<p id="Buas">
-			Website developed by a <a href="https//www.buas.nl" target="_blank">Breda University Students</a>
+			Website developed by <a href="https//www.buas.nl" target="_blank">Breda University Students</a>
 		</p>
 		<p id="dummytext">
 			Lorem ipsum
