--- a/index.html
+++ b/index.html
@@ -4,24 +4,26 @@
 		<meta charset="utf-8">
 		<title>Amazing Dogs</title>
 		<link href="css/styles.css" type="text/css" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;700&display=swap" rel="stylesheet">
 	</head>
 	
 	<body>
-		<div class="introduction">
+			<button type="button" formtarget="_self" link="https://izzayi.github.io/prj4-chapter-3/">Menu</button>
+		
+		<header class="introduction">
 			<h1>The Poodle</h1>
 			<h3>Created by: Izzy Pletl</h3>
 			<h3>Edited by: Raphaël (lecturer)</h3>
-			<img src="images/big_pudel.jpg" width="300" alt="Picture of a Poodle" id="corners">
-		</div>
-		<div class="history">
+			<img src="images/big_pudel.jpg" alt="Picture of a Poodle" id="corners">
+		</header>
+		<div class="box">
 			<h2>History</h2>
 			<p>
 				The poodle is a beautiful dog breed, very smart, intelligent and it comes in big and small. The name of the poodle comes from the German word <em>pudeln</em>, which means: splash in water. 
 				The poodle used to be a popular breed for water-hunts of noblemen before the 19th century, therefore the name.
 				Because of his great attributes, the Pudel contributed to many other breeds like the <em>Schnauzer</em>, or the <em>Bichon</em>. 
-			</p>
-		</div>
-		<div class="features">
+			</p> <br>
 			<h2>Features</h2>
 			<p>
 				As mentioned before, poodle have many different sizes, being:
@@ -33,13 +35,10 @@
 				<li>Standard</li>
 			</ul>
 		</div>
-		<div class="end">
-		<p id="Buas">
+		<footer>
+		<p>
 			Website developed by <a href="https//www.buas.nl" target="_blank">Breda University Students</a>
 		</p>
-		<p id="dummytext">
-			Lorem ipsum
-		</p>
-		</div>
+		</footer>
 	</body>
 </html>
