--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	
 	<body>
-			<button type="button" formtarget="_self" link="https://izzayi.github.io/prj4-chapter-3/">Menu</button>
+			<button onclick="https://izzayi.github.io/prj4-chapter-3/">Menu</button>
 		
 		<header class="introduction">
 			<h1>The Poodle</h1>
