--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		</div>
 		<footer>
 		<p>
-			Website developed by <a href="https//www.buas.nl" target="_blank">Breda University Students</a>
+			Website developed by <a href="https://www.buas.nl" target="_blank">Breda University Students</a>
 		</p>
 		</footer>
 	</body>
