--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	</head>
 	
 	<body>
-			<button onclick="https://izzayi.github.io/prj4-chapter-3/index">Menu</button>
+			<button onclick="window.location.href = 'https://izzayi.github.io/prj4-chapter-3/#top';">Menu</button>
 		
-		<header class="introduction">
+		<header class="introduction" id="top">
 			<h1>The Poodle</h1>
 			<h3>Created by: Izzy Pletl</h3>
 			<h3>Edited by: Raphaël (lecturer)</h3>
